# llm-multi-agent-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  context.py  db.py  eval_harness.py  logging_utils.py  main.py  models.py  orchestrator.py  prompts.py  run_eval.py  schemas.py  seed.py  utils.py  worker.py
app/agents/: __init__.py  base.py  compression.py  critique.py  decomposition.py  meta.py  retrieval.py  synthesis.py
app/tools/: __init__.py  base.py  code_sandbox.py  data_lookup.py  self_reflection.py  web_search.py
docs/: architecture.md
tests/: test_context.py  test_eval.py  test_orchestrator.py  test_tools.py
